完成熔断器hystrix-go总结

--- a/breaker/hystrix-go/总结.md
+++ b/breaker/hystrix-go/总结.md
@@ -110,9 +110,9 @@ func newCircuitBreaker(name string) *CircuitBreaker {
 }
 ```
 2. 在判断是否允许执行 cmd 时，如果同时满足以下三个条件，打开熔断器：
-   1. 熔断器当前状态为关闭（open=false）
-   2. 熔断器 10s 内的**请求总数**超过阈值（RequestVolumeThreshold）
-   3. 熔断器 10s 内的**错误率**超过阈值（ErrorPercentThreshold）
+- 熔断器当前状态为关闭（open=false）
+- 熔断器 10s 内的**请求总数**超过阈值（RequestVolumeThreshold）
+- 熔断器 10s 内的**错误率**超过阈值（ErrorPercentThreshold）
 ```go
 func (circuit *CircuitBreaker) IsOpen() bool {
 	circuit.mutex.RLock()
@@ -186,3 +186,256 @@ func (circuit *CircuitBreaker) ReportEvent(eventTypes []string, start time.Time,
 ```
 
 ## 2. 上层调用
+### 1. 入口函数
+熔断器执行 cmd 可以调用四个方法，分别是：
+```go
+// 定义依赖于外部系统的方法，例如数据库请求
+type runFunc func() error
+// 定义服务中断期间执行的方法
+type fallbackFunc func(error) error
+
+func Go(name string, run runFunc, fallback fallbackFunc) chan error
+func GoC(ctx context.Context, name string, run runFuncC, fallback fallbackFuncC) chan error
+func Do(name string, run runFunc, fallback fallbackFunc) error
+func DoC(ctx context.Context, name string, run runFuncC, fallback fallbackFuncC) error
+```
+四个方法中，`Do`和`DoC`是同步调用，`Go`和`GoC`是异步调用。  
+`Do`内部调用了`DoC`方法，`Go`内部调用了`GoC`方法。`Doc`实际又调用了`GoC`方法。  
+所以，本质上。熔断器执行 cmd 调用的都是`GoC`方法
+### 2. GoC 方法
+
+#### 1. 创建 command 对象
+每一个请求调用，都封装成一个`command`对象，其数据结构如下：
+```go
+type command struct {
+	sync.Mutex
+
+	ticket      *struct{}       // 代表从令牌桶中取出的一个令牌
+	start       time.Time       // command 执行开始时间
+	errChan     chan error      // command 执行错误
+	finished    chan bool       // command 执行结束
+	circuit     *CircuitBreaker // 熔断器对象
+	run         runFuncC        // 应用程序
+	fallback    fallbackFuncC   // 应用程序执行失败时的回调函数
+	runDuration time.Duration   // 执行 run 函数的时长
+	events      []string        // 存储事件类型信息
+}
+```
+在`GoC`中，使用传入的 run 和 fallback 函数，创建`command`对象，使用传入的 name 获取熔断器对象，存入`command`对象的 circuit
+```go
+func GoC(ctx context.Context, name string, run runFuncC, fallback fallbackFuncC) chan error {
+    // 对于每个调用：实例化 command 对象
+    cmd := &command{
+        run:      run,
+        fallback: fallback,
+        start:    time.Now(),
+        errChan:  make(chan error, 1),
+        finished: make(chan bool, 1),
+    }
+    
+    
+    // 根据 name 获取熔断器对象
+    circuit, _, err := GetCircuit(name)
+    if err != nil {
+        cmd.errChan <- err
+        return cmd.errChan
+    }
+    cmd.circuit = circuit
+	
+    ...
+}
+```
+#### 2. 定义闭包方法
+在 hystrix-go 中，使用令牌桶做了限流，执行请求前从令牌桶中获取令牌，执行结束将令牌放回令牌桶。  
+在此处定义归还令牌桶的闭包方法，方便后续业务中调用。  
+其中使用 sync.NewCond 实现了信号量，当令牌被取出后，用来协调通知可以归还令牌了。
+定义 `Return` 方法归还令牌，并进行监控数据上报
+```go
+func GoC(ctx context.Context, name string, run runFuncC, fallback fallbackFuncC) chan error {
+    ...
+	
+    // 使用 cmd 内部的锁初始化 Cond
+    ticketCond := sync.NewCond(cmd)
+    ticketChecked := false
+    // 将令牌还到令牌桶中
+    returnTicket := func() {
+        cmd.Lock()
+        // 避免在令牌被取出之前释放令牌。
+        for !ticketChecked {
+            // 陷入阻塞
+            ticketCond.Wait()
+        }
+        // 归还令牌
+        cmd.circuit.executorPool.Return(cmd.ticket)
+        cmd.Unlock()
+    }
+	
+	...
+```
+熔断器也需要根据请求执行结果进行状态轮转，此处还定义了一个上报状态的方法：
+```go
+func GoC(ctx context.Context, name string, run runFuncC, fallback fallbackFuncC) chan error {
+    ...
+
+	// 上报状态事件
+    reportAllEvent := func() {
+    err := cmd.circuit.ReportEvent(cmd.events, cmd.start, cmd.runDuration)
+        if err != nil {
+            log.Printf(err.Error())
+        }
+    }
+    
+	...
+```
+#### 3. 协程1：执行应用程序逻辑——runFunc
+该协程主要做了以下几件事：
+1. 根据熔断器状态判断是否执行该请求，如果不执行，则直接返回
+2. 尝试从令牌桶中获取令牌，获取不到令牌直接返回
+3. 成功拿到令牌，执行 runFunc 函数，并将执行结果返回
+```go
+func GoC(ctx context.Context, name string, run runFuncC, fallback fallbackFuncC) chan error {
+    ...
+	
+    // 执行 run
+    go func() {
+        // 同步
+        defer func() { cmd.finished <- true }()
+
+        // 根据熔断器状态判断不执行该请求
+        if !cmd.circuit.AllowRequest() {
+            cmd.Lock()
+            // 此时根本没获取到令牌，为了保持一致性，依然选择归还令牌
+            // 在归还令牌处兼容令牌为 nil 的场景
+            ticketChecked = true
+            // 通知释放令牌信息
+            ticketCond.Signal()
+            cmd.Unlock()
+            returnOnce.Do(func() {
+                // 归还令牌
+                returnTicket()
+                // 执行 fallback
+                cmd.errorWithFallback(ctx, ErrCircuitOpen)
+                // 上报状态事件
+                reportAllEvent()
+            })
+            return
+        }
+
+      
+        cmd.Lock()
+        select {
+        case cmd.ticket = <-circuit.executorPool.Tickets: // 能从令牌桶中成功获取到令牌，放行该请求
+            ticketChecked = true
+            ticketCond.Signal()
+            cmd.Unlock()
+        default: // 不能从令牌桶中获取到令牌，达到最大并发数量，执行 fallback
+            ticketChecked = true
+            ticketCond.Signal()
+            cmd.Unlock()
+            returnOnce.Do(func() {
+                // 归还令牌
+                returnTicket()
+                // 达到最大并发数，执行 fallback
+                cmd.errorWithFallback(ctx, ErrMaxConcurrency)
+                reportAllEvent()
+            })
+            return
+        }
+
+        // 成功拿到令牌，执行 run
+        runStart := time.Now()
+        runErr := run(ctx)
+        returnOnce.Do(func() {
+            defer reportAllEvent()
+            // 统计 run 执行时间
+            cmd.runDuration = time.Since(runStart)
+            // 归还令牌
+            returnTicket()
+            if runErr != nil {
+                // 如果应用程序执行失败执行fallback函数
+                cmd.errorWithFallback(ctx, runErr)
+                return
+            }
+            // 追加 "success" 事件
+            cmd.reportEvent("success")
+        })
+    }()
+```
+#### 4. 协程2：同步协程并监听错误
+该协程监听 runFunc 函数执行，上层context或者cmd超时取消执行 fallback 函数。
+```go
+    go func() {
+        // 启动定时器进行超时控制，默认 1 s
+        timer := time.NewTimer(getSettings(name).Timeout)
+        defer timer.Stop()
+
+        select {
+        // 前面执行 run 的协程成功执行完成（不论是否成功）
+        case <-cmd.finished:
+            // returnOnce has been executed in another goroutine
+        case <-ctx.Done(): // context 取消
+            returnOnce.Do(func() {
+                returnTicket()
+                cmd.errorWithFallback(ctx, ctx.Err())
+                reportAllEvent()
+            })
+            return
+        case <-timer.C: // cmd 超时
+            returnOnce.Do(func() {
+                returnTicket()
+                cmd.errorWithFallback(ctx, ErrTimeout)
+                reportAllEvent()
+            })
+            return
+        }
+    }()
+```
+#### 5. 执行fallback函数
+当前面两个协程未成功执行，将执行 fallback 函数。其入口为 `errorWithFallback` 方法：
+```go
+// errorWithFallback 根据错误类型触发 fallback，并记录相应的 metric 事件
+func (c *command) errorWithFallback(ctx context.Context, err error) {
+	eventType := "failure"
+	if err == ErrCircuitOpen { // 熔断器打开状态
+		eventType = "short-circuit"
+	} else if err == ErrMaxConcurrency { // 最大并发数
+		eventType = "rejected"
+	} else if err == ErrTimeout { // 超时
+		eventType = "timeout"
+	} else if err == context.Canceled { // context 取消
+		eventType = "context_canceled"
+	} else if err == context.DeadlineExceeded { // context 超时
+		eventType = "context_deadline_exceeded"
+	}
+
+	// 追加到 events 中
+	c.reportEvent(eventType)
+	// 尝试执行 fallback
+	fallbackErr := c.tryFallback(ctx, err)
+	if fallbackErr != nil {
+		c.errChan <- fallbackErr // 将错误写回 errChan，返回给实际的 GoC 调用方
+	}
+}
+
+// 尝试执行 fallback，如果成功执行 fallback，返回 nil
+func (c *command) tryFallback(ctx context.Context, err error) error {
+	if c.fallback == nil {
+		// 如果没有定义 fallback，则直接返回错误
+		return err
+	}
+
+	// 执行 fallback
+	fallbackErr := c.fallback(ctx, err)
+	if fallbackErr != nil {
+		c.reportEvent("fallback-failure")
+		return fmt.Errorf("fallback failed with '%v'. run error was '%v'", fallbackErr, err)
+	}
+
+	c.reportEvent("fallback-success")
+
+	return nil
+}
+
+```
+
+参考：[微服务架构下的熔断框架：hystrix-go](https://juejin.cn/post/7004802597332713503)
